option('systemduserunitdir', type: 'string', value: '', description: 'custom directory for systemd user units')

option('search_provider', type: 'boolean', value: true, description: 'Enable gnome-shell search provider')
option('nautilus_extension', type: 'boolean', value: false, description: 'Enable nautilus extension')
