@YELP_HELP_RULES@

NULL =

HELP_ID = gnome-terminal

HELP_MEDIA = \
	figures/gnome-terminal.png \
	figures/gnome-terminal-icon.png \
	$(NULL)

HELP_FILES = \
	adv-keyboard-shortcuts.page \
	app-colors.page \
	app-cursor.page \
	app-fonts.page \
	app-fullscreen.page \
	app-terminal-sizes.page \
	app-zoom.page \
	gs-execute-commands.page \
	gs-tabs.page \
	index.page \
	introduction.page \
	legal.xml \
	overview.page \
	pref.page \
	pref-bell.page \
	pref-custom-exit.page \
	pref-custom-command.page \
	pref-encoding.page \
	pref-keyboard-access.page \
	pref-menubar.page \
	pref-profiles.page \
	pref-scrolling.page \
	pref-title.page \
	profile.page \
	txt-copy-paste.page \
	txt-links.page \
	txt-search.page \
	txt-select-text.page \
	$(NULL)

HELP_LINGUAS = ca cs da de el en_GB es fr gl it ko oc pt_BR ro ru sl sv te uk zh_CN

-include $(top_srcdir)/git.mk
