@YELP_HELP_RULES@

NULL =

HELP_ID = gnome-terminal

HELP_MEDIA = \
	figures/gnome-terminal.png \
	figures/gnome-terminal-icon.png \
	$(NULL)

HELP_FILES = \
	adv-keyboard-shortcuts.page \
	app-colors.page \
	app-cursor.page \
	app-fonts.page \
	app-fullscreen.page \
	app-terminal-sizes.page \
	app-zoom.page \
	gs-execute-commands.page \
	gs-tabs.page \
	index.page \
	introduction.page \
	legal.xml \
	overview.page \
	pref.page \
	pref-bell.page \
	pref-custom-exit.page \
	pref-custom-command.page \
	pref-encoding.page \
	pref-keyboard-access.page \
	pref-menubar.page \
	pref-profiles.page \
	pref-profile-char-width.page \
	pref-profile-encoding.page \
	pref-scrolling.page \
	pref-tab-window.page \
	pref-theme.page \
	profile.page \
	prob-reset.page \
	txt-copy-paste.page \
	txt-links.page \
	txt-search.page \
	txt-select-text.page \
	$(NULL)

HELP_LINGUAS = cs de el es fi fr gl hu pt_BR ru

-include $(top_srcdir)/git.mk
