# Copyright © 2019, 2020, 2021 Christian Persch
#
# This programme is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or (at your
# option) any later version.
#
# This programme is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this programme.  If not, see <https://www.gnu.org/licenses/>.

help_media = [
  'figures/gnome-terminal.png',
  'figures/keyboard-key-search.svg',
  'figures/org.gnome.Terminal.svg',
]

help_pages = [
  'adv-keyboard-shortcuts.page',
  'app-colors.page',
  'app-cursor.page',
  'app-fonts.page',
  'app-fullscreen.page',
  'app-terminal-sizes.page',
  'app-zoom.page',
  'gs-execute-commands.page',
  'gs-tabs.page',
  'index.page',
  'introduction.page',
  'legal.xml',
  'overview.page',
  'pref.page',
  'pref-bell.page',
  'pref-custom-exit.page',
  'pref-custom-command.page',
  'pref-keyboard-access.page',
  'pref-login-shell.page',
  'pref-menubar.page',
  'pref-profiles.page',
  'pref-profile-char-width.page',
  'pref-profile-encoding.page',
  'pref-scrolling.page',
  'pref-tab-window.page',
  'pref-user-input.page',
  'prob-reset.page',
  'txt-copy-paste.page',
  'txt-links.page',
  # https://gitlab.gnome.org/GNOME/gnome-terminal/issues/71 :
  # 'txt-save-text.page',
  'txt-search.page',
  'txt-select-text.page',
]

gnome.yelp(
  gt_name,
  media: help_media,
  sources: help_pages,
)
